crates/background/src/snapshots/background__faction_agent__tests__skills.snap
---
source: crates/background/src/faction_agent.rs
expression: "FactionAgent::skills()"

---
- Insight
- AnimalHandling
- Arcana
- Deception
- History
- Insight
- Intimidation
- Investigation
- Medicine
- Nature
- Perception
- Performance
- Persuasion
- Religion
- Survival

