crates/background/src/snapshots/background__faction_agent__tests__snapshot.snap
---
source: crates/background/src/faction_agent.rs
expression: background

---
faction: OrderOfTheGauntlet

