crates/background/src/snapshots/background__faction_agent__tests__snapshot_addl_equipment.snap
---
source: crates/background/src/faction_agent.rs
expression: background.addl_equipment()

---
- From:
    - - Other: the badge of your faction
      - Other: the emblem of your faction
    - 1
- From:
    - - Other: a copy of a seminal faction text
      - Other: a code-book for a covert faction
    - 1

