crates/background/src/snapshots/background__faction_agent__tests__snapshot_addl_proficiences.snap
---
source: crates/background/src/faction_agent.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - AnimalHandling
      - Arcana
      - Deception
      - History
      - Insight
      - Intimidation
      - Investigation
      - Medicine
      - Nature
      - Perception
      - Performance
      - Persuasion
      - Religion
      - Survival
    - 1

