crates/background/src/snapshots/background__faction_agent__tests__snapshot_citations.snap
---
source: crates/background/src/faction_agent.rs
expression: background.citations()

---
- - Scag
  - 147

