crates/background/src/snapshots/background__faction_agent__tests__snapshot_coins.snap
---
source: crates/background/src/faction_agent.rs
expression: background.coins()

---
- Gold
- 15

