crates/background/src/snapshots/background__faction_agent__tests__snapshot_display.snap
---
source: crates/background/src/faction_agent.rs
expression: background

---
The Order of the Gauntlet Faction Agent
