crates/background/src/snapshots/background__faction_agent__tests__snapshot_equipment.snap
---
source: crates/background/src/faction_agent.rs
expression: background.equipment()

---
- Gear:
    Other: ClothesCommon
- Gear:
    Other: Pouch

