crates/background/src/snapshots/background__faction_agent__tests__snapshot_features.snap
---
source: crates/background/src/faction_agent.rs
expression: background.features()

---
- title: Safe Haven
  citation:
    - Scag
    - 147

